# watchtower

./: .env.template  README.md  app.py  pyproject.toml
examples/: calculate_doppler.py  check_sgp4_accel.py  discos_api.py  init_sgp4_yourself.py
src/watchtower/calculation/: __init__.py  coordinate_map.py  doppler.py  sgp4_utils.py  unit_conversion.py  vector.py
src/watchtower/validation/: __init__.py  orbit.py
