[build-system]
requires = [
    "setuptools>=61",
    # "setuptools_scm[toml]>=7",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "watcher"
version = "0.0.1"
description = "Cassini Hackathon 8 - Project Watchtower"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy",
    "black",
    "isort",
    "numpy",
    "plotly",
    "poliastro",
    "pytest",
    "python-dotenv",
    "scipy",
    "sgp4",
    "sqlalchemy",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = 39
line_length = 120
